@@ -6,6 +6,7 @@
 
 - Fix fontification of ellipsis.
 - Check that ~org-modern-label-border~ is an integer.
+- Add ~org-modern-habit~ face to improve habit progress fontification.
 
 * Version 1.6 (2024-12-22)
 
